Switch to URI immediately on entering Location, to be more consistent within FilePathLocation and JarFileLocation